# headline

./: .gitignore  README.md  mix.exs
assets/: package-lock.json
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  util.rs
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: headline.ex  headline_web.ex
lib/headline/: application.ex  ecto_enums.ex  fetcher.ex  repo.ex  rss.ex
lib/headline/fetch/: feed.ex  run.ex  server.ex  twitter.ex
lib/headline/fetcher/: worker.ex
lib/headline/rss/: feed.ex  group.ex  item.ex
lib/headline_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  util.ex
lib/headline_web/channels/: user_socket.ex
lib/headline_web/controllers/: fallback_controller.ex  feed_controller.ex  fetch_controller.ex  group_controller.ex  item_controller.ex  page_controller.ex
lib/headline_web/plugs/: fever_api_router.ex
lib/headline_web/views/: base_view.ex  changeset_view.ex  error_helpers.ex  error_view.ex  feed_view.ex  group_view.ex  item_view.ex  layout_view.ex  page_view.ex
priv/repo/: seeds.exs
priv/repo/migrations/: 20200805100321_create_feeds.exs  20200805100354_create_groups.exs  20200805100443_create_items.exs  20200805100852_feed_belongs_to_group.exs  20200810083454_html_text_not_varchar.exs  20200810133507_item_url_unique.exs  20201109052032_add_feed_type.exs  20201109053325_add_twitter_fetched_upto.exs
test/: test_helper.exs
test/headline/: rss_test.exs
test/headline_web/controllers/: feed_controller_test.exs  group_controller_test.exs  (+2 more)
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+4 files in other folders)
