[package]
name = "cli"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.5.5"
tokio = { version = "0.2", features = ["full"] }
clap = "~2.27.0"
reqwest = { version = "0.10", features = ["json"] }
regex = "1"